--- a/.env.example
+++ b/.env.example
@@ -1,2 +1,7 @@
+# Web3 Configuration
 NEXT_PUBLIC_ALCHEMY_ID=your_alchemy_id
 NEXT_PUBLIC_WALLET_CONNECT_PROJECT_ID=your_walletconnect_project_id
+
+# API Configuration
+NEXT_PUBLIC_USE_MOCK_DATA=true
+NEXT_PUBLIC_API_BASE_URL=https://api.pumpstarter.dao
